# qShogi

./: CMakeLists.txt  LICENSE  README.md  qshogi.desktop
.github/workflows/: build-qshogi.yml  ci-main.yml  codeql-analysis.yml  test-libshogi.yml  test-shogi.yml
docs/: Build.md
libshogi/: CMakeLists.txt
libshogi/include/: Cell.h  Move.h  shogi.h
libshogi/src/: Piece.cpp  ShogiBoard.cpp
libshogi/tests/: BoardTest.cpp  CMakeLists.txt  CellTest.cpp  PieceTest.cpp
libshogi2/: CMakeLists.txt
libshogi2/include/: Board.h  ShogiBoard.h
libshogi2/src/: Board.cpp  ShogiBoard.cpp
src/: CMakeLists.txt  resources.qrc
src/include/: BoardModel.h  GameController.h  GameMovesModel.h  HandModel.h  NorthHandModel.h  SouthHandModel.h
src/qShogi/: BoardModel.h  CMakeLists.txt  GameController.cpp  GameController.h  GameLogModel.cpp  GameLogModel.h  GameMovesModel.cpp  GameMovesModel.h  NorthHandModel.cpp  NorthHandModel.h  SouthHandModel.cpp  SouthHandModel.h
src/qShogi/resources/: resources.qrc
src/qShogi/resources/pieces/kanji_light/: README.md
src/qShogi/resources/qml/: GameArea.qml  GameRecordArea.qml  PieceInHand.qml  PieceOnBoard.qml  main.qml
src/qml/: AboutDialog.qml  AppMenuBar.qml  Hand.qml  InfoPlayer.qml  LeftPanel.qml  NewGameDialog.qml  PieceInHand.qml  PieceOnBoard.qml  PromoteDialog.qml  RightPanel.qml  main.qml
src/shogi/: Board.cpp  Board.h  CMakeLists.txt  Cell.h  Move.cpp  Move.h  Piece.cpp  Piece.h
src/src/: BoardModel.cpp  GameController.cpp  GameMovesModel.cpp  HandModel.cpp  main.cpp
test/: BoardTest.cpp  CMakeLists.txt  CellTest.cpp  PieceTest.cpp
